--- a/css/style.css
+++ b/css/style.css
@@ -2573,3 +2573,10 @@ a {
 .swiper-button-next:focus {
   border: 2px solid #9D5CD0;
 }
+
+@media (max-width: 680px) {
+  .accordion__tabs-nav {
+    max-height: 1000px;
+    height: auto;
+  }
+}
